fix(Align): fix input to button alignment

--- a/packages/components/src/components/Chat/Chat.module.scss
+++ b/packages/components/src/components/Chat/Chat.module.scss
@@ -36,7 +36,7 @@
   .chat .controls {
     flex-wrap: wrap;
     .accentButton {
-      width: 100%;
+      flex-grow: 1;
     }
   }
 }
